<resources>
    <string name="app_name">Task Manager</string>
    <string name="view_tasks_name">View Tasks</string>
    <string name="add_task_name">Add Task</string>
    <string name="edit_task_name">Edit Task</string>

    <string name="title_label">Title</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>

    <string name="priority_label">Priority</string>
    <string name="priority_high_label">High</string>
    <string name="priority_medium_label">Medium</string>
    <string name="priority_low_label">Low</string>

    <string name="save_button_label">Save</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="no_tasks_label">No Tasks created. Click the add icon to create tasks</string>

    <string name="title_error">Invalid title</string>
    <string name="date_error">Invalid date</string>
    <string name="time_error">Invalid time</string>

    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="add_success_message">Task added successfully</string>
    <string name="edit_success_message">Task updated</string>
</resources>
